tests/semantic_cases/valid/readint_assignment.ob0
MODULE Main;
VAR x;
BEGIN
  x := ReadInt()
END Main.
