tests/semantic_cases/invalid/operator_unary_sign_requires_numeric.ob0
(* INVALID: unary '+' requires a numeric operand, not BOOLEAN variable *)
MODULE Main;
VAR flag: BOOLEAN;
VAR x: INTEGER;
BEGIN
  x := +flag
END Main.
